<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>demo</groupId>
    <artifactId>demo.concurrent</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>

    </properties>
    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.2.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>java</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <executable>java</executable>
                    <mainClass>demo.concurrent.optimizations.LockTest</mainClass>
                    <arguments>
                        <argument>-XX:+EliminateLocks</argument>
                        <!--<argument>-XX:+UseBiasedLocking</argument>-->
                        <!--<argument>-XX:+DoEscapeAnalysis</argument>-->
                    </arguments>

                    <!--<systemProperties>-->
                        <!--<systemProperty>-->
                            <!--<key>java.util.logging.config.file</key>-->
                            <!--<value>logging.properties</value>-->
                        <!--</systemProperty>-->
                    <!--</systemProperties>-->
                </configuration>

            </plugin>
        </plugins>
    </build>

</project>